# ProjC-

./: .gitignore  C++Test.cpp  CMakeLists.txt  CalcHeader.h  CalcSource.cpp  README.md  calc.cpp  main.cpp  tests.cpp
